setting up the associations

--- a/Shop/app/views/shop/index.html.erb
+++ b/Shop/app/views/shop/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Shop#index</h1>
-<p>Find me in app/views/shop/index.html.erb</p>
+<h1><%= "Follwing are the available Products" %></h1>
+<%= react_component('Products', name: 'Please see the below products') %>
