--- a/Shop/app/views/shop/index.html.erb
+++ b/Shop/app/views/shop/index.html.erb
@@ -4,3 +4,5 @@
 <%= react_component('Products',serialno:p.id,name: p.name,price:p.price) %>
 <%end%>
 
+<br/><br/><br/>
+<p style="margin-left:8%;">Note: Select the product by clicking select button and then choose your location to see the final price of product. </p>
