added the field for updating the price

--- a/Shop/app/views/shop/index.html.erb
+++ b/Shop/app/views/shop/index.html.erb
@@ -5,4 +5,8 @@
 <%end%>
 
 <br/><br/><br/>
-<p style="margin-left:8%;">Note: Select the product by clicking select button and then choose your location to see the final price of product. </p>
+<div className="row">
+<div className="col-md-6">
+<p style="margin-left:8%;"><B>Note:</B> This page shows admin view for products available in store.Admin can change the price of product by editing entry in input field.Admin can check the price of item in particular area by selecting the pincode from dropdown.The Fixed price field shows the final price of item.</p>
+</div>
+</div>
